--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="cfO-c7-M0M">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="egR-g1-bRZ">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -16,6 +16,52 @@
         </array>
     </customFonts>
     <scenes>
+        <!--Splash View Controller-->
+        <scene sceneID="Gpf-Yr-Uz2">
+            <objects>
+                <viewController storyboardIdentifier="SplashViewController" useStoryboardIdentifierAsRestorationIdentifier="YES" id="egR-g1-bRZ" customClass="SplashViewController" customModule="LocationTracking" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="9xI-0f-cJw"/>
+                        <viewControllerLayoutGuide type="bottom" id="iuE-FO-4Qd"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="B5z-kf-mP4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="Vhd-NJ-zVo">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                            </imageView>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo" translatesAutoresizingMaskIntoConstraints="NO" id="JDG-GE-X4a">
+                                <rect key="frame" x="85" y="100" width="150" height="150"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="150" id="I27-yu-hb3"/>
+                                    <constraint firstAttribute="height" constant="150" id="mau-gc-LXl"/>
+                                </constraints>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location Share" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7tt-V5-vqG">
+                                <rect key="frame" x="52" y="290" width="217" height="38.5"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="32"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="bottom" secondItem="Vhd-NJ-zVo" secondAttribute="bottom" id="4Mj-t6-mrk"/>
+                            <constraint firstItem="Vhd-NJ-zVo" firstAttribute="leading" secondItem="B5z-kf-mP4" secondAttribute="leading" id="RyZ-aV-3C8"/>
+                            <constraint firstItem="Vhd-NJ-zVo" firstAttribute="top" secondItem="B5z-kf-mP4" secondAttribute="top" id="S8Z-xQ-PcA"/>
+                            <constraint firstAttribute="trailing" secondItem="Vhd-NJ-zVo" secondAttribute="trailing" id="TNV-jm-j1e"/>
+                            <constraint firstItem="7tt-V5-vqG" firstAttribute="centerX" secondItem="B5z-kf-mP4" secondAttribute="centerX" id="UmY-KI-Lxw"/>
+                            <constraint firstItem="JDG-GE-X4a" firstAttribute="centerX" secondItem="B5z-kf-mP4" secondAttribute="centerX" id="V8N-Ch-39t"/>
+                            <constraint firstItem="7tt-V5-vqG" firstAttribute="top" secondItem="JDG-GE-X4a" secondAttribute="bottom" constant="40" id="hF9-e1-lNm"/>
+                            <constraint firstItem="JDG-GE-X4a" firstAttribute="top" secondItem="9xI-0f-cJw" secondAttribute="bottom" constant="80" id="kmu-LJ-J65"/>
+                        </constraints>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="frh-0v-pYJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1459" y="117"/>
+        </scene>
         <!--Sign In View Controller-->
         <scene sceneID="p2l-cn-Wek">
             <objects>
