--- a/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
+++ b/LocationTracking/LocationTracking/Base.lproj/Main.storyboard
@@ -295,6 +295,23 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="76e-6B-ZHS">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="8ws-Lw-zZ0">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mKD-NH-3Rb">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="mKD-NH-3Rb" firstAttribute="centerY" secondItem="8ws-Lw-zZ0" secondAttribute="centerY" id="2ON-qM-wi6"/>
+                                    <constraint firstItem="mKD-NH-3Rb" firstAttribute="top" secondItem="8ws-Lw-zZ0" secondAttribute="top" id="INk-cT-pRw"/>
+                                    <constraint firstItem="mKD-NH-3Rb" firstAttribute="leading" secondItem="8ws-Lw-zZ0" secondAttribute="leading" id="XhA-lR-Bao"/>
+                                    <constraint firstAttribute="trailing" secondItem="mKD-NH-3Rb" secondAttribute="trailing" id="iBr-7Y-oei"/>
+                                    <constraint firstItem="mKD-NH-3Rb" firstAttribute="centerX" secondItem="8ws-Lw-zZ0" secondAttribute="centerX" id="lSO-a9-xy1"/>
+                                    <constraint firstAttribute="bottom" secondItem="mKD-NH-3Rb" secondAttribute="bottom" id="uvL-lh-8ik"/>
+                                </constraints>
+                            </scrollView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="Email" placeholder="Email" minimumFontSize="16" clearButtonMode="always" translatesAutoresizingMaskIntoConstraints="NO" id="xe3-Zk-Fxt" customClass="TextField" customModule="LocationTracking" customModuleProvider="target">
                                 <rect key="frame" x="20" y="230" width="280" height="40"/>
                                 <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.25" colorSpace="calibratedRGB"/>
@@ -408,8 +425,10 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstAttribute="bottom" secondItem="8ws-Lw-zZ0" secondAttribute="bottom" id="03Y-qU-Ap1"/>
                             <constraint firstItem="xe3-Zk-Fxt" firstAttribute="leading" secondItem="6YF-KF-GxT" secondAttribute="leading" constant="20" id="6iO-qv-EBm"/>
                             <constraint firstItem="76e-6B-ZHS" firstAttribute="leading" secondItem="6YF-KF-GxT" secondAttribute="leading" id="7Mz-O6-aAh"/>
+                            <constraint firstItem="8ws-Lw-zZ0" firstAttribute="leading" secondItem="6YF-KF-GxT" secondAttribute="leading" id="8VO-Bp-79x"/>
                             <constraint firstItem="xX1-yL-vmD" firstAttribute="leading" secondItem="xe3-Zk-Fxt" secondAttribute="leading" id="BWh-qg-NWC"/>
                             <constraint firstItem="Hm8-si-SgI" firstAttribute="top" secondItem="Rbw-kg-nbU" secondAttribute="bottom" constant="10" id="EW8-ws-dcX"/>
                             <constraint firstItem="v5j-pC-s3F" firstAttribute="centerX" secondItem="6YF-KF-GxT" secondAttribute="centerX" id="Ec4-av-bMx"/>
@@ -417,6 +436,7 @@
                             <constraint firstItem="Hm8-si-SgI" firstAttribute="leading" secondItem="xe3-Zk-Fxt" secondAttribute="leading" id="IPP-Eq-Sxm"/>
                             <constraint firstItem="TWe-a7-pkX" firstAttribute="leading" secondItem="6YF-KF-GxT" secondAttribute="leading" constant="10" id="Ig5-RW-2TH"/>
                             <constraint firstAttribute="trailing" secondItem="76e-6B-ZHS" secondAttribute="trailing" id="MQY-8q-mb6"/>
+                            <constraint firstItem="8ws-Lw-zZ0" firstAttribute="top" secondItem="6YF-KF-GxT" secondAttribute="top" id="QM9-qe-BZN"/>
                             <constraint firstItem="76e-6B-ZHS" firstAttribute="top" secondItem="6YF-KF-GxT" secondAttribute="top" id="QVH-7j-Lvf"/>
                             <constraint firstItem="xe3-Zk-Fxt" firstAttribute="top" secondItem="v5j-pC-s3F" secondAttribute="bottom" constant="30" id="S0b-ov-ZBc"/>
                             <constraint firstItem="tV4-uA-XEV" firstAttribute="centerX" secondItem="6YF-KF-GxT" secondAttribute="centerX" id="XvD-AB-WRM"/>
@@ -427,6 +447,7 @@
                             <constraint firstAttribute="bottom" secondItem="76e-6B-ZHS" secondAttribute="bottom" id="f5M-ge-Th5"/>
                             <constraint firstItem="xX1-yL-vmD" firstAttribute="trailing" secondItem="xe3-Zk-Fxt" secondAttribute="trailing" id="fGQ-ZP-y7q"/>
                             <constraint firstItem="v5j-pC-s3F" firstAttribute="top" secondItem="kWJ-Cr-AI8" secondAttribute="bottom" constant="30" id="gTp-62-jil"/>
+                            <constraint firstAttribute="trailing" secondItem="8ws-Lw-zZ0" secondAttribute="trailing" id="hNe-G3-OdB"/>
                             <constraint firstItem="tV4-uA-XEV" firstAttribute="top" secondItem="Hm8-si-SgI" secondAttribute="bottom" constant="40" id="lzY-FO-IIG"/>
                             <constraint firstItem="Rbw-kg-nbU" firstAttribute="trailing" secondItem="xe3-Zk-Fxt" secondAttribute="trailing" id="nLo-RW-55Q"/>
                             <constraint firstItem="Rbw-kg-nbU" firstAttribute="top" secondItem="xX1-yL-vmD" secondAttribute="bottom" constant="10" id="nu2-Am-TMO"/>
@@ -459,6 +480,23 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="RmD-25-9Bl">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="x3M-rT-8Sz">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="voY-qY-6At">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="voY-qY-6At" firstAttribute="centerY" secondItem="x3M-rT-8Sz" secondAttribute="centerY" id="HkN-bV-aPx"/>
+                                    <constraint firstAttribute="bottom" secondItem="voY-qY-6At" secondAttribute="bottom" id="KP7-5w-NNk"/>
+                                    <constraint firstItem="voY-qY-6At" firstAttribute="leading" secondItem="x3M-rT-8Sz" secondAttribute="leading" id="Lto-7e-xHJ"/>
+                                    <constraint firstItem="voY-qY-6At" firstAttribute="top" secondItem="x3M-rT-8Sz" secondAttribute="top" id="PVF-UE-GTc"/>
+                                    <constraint firstAttribute="trailing" secondItem="voY-qY-6At" secondAttribute="trailing" id="YvK-Yb-mNd"/>
+                                    <constraint firstItem="voY-qY-6At" firstAttribute="centerX" secondItem="x3M-rT-8Sz" secondAttribute="centerX" id="t47-Si-zf1"/>
+                                </constraints>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NxM-D9-zjo">
                                 <rect key="frame" x="10" y="20" width="45" height="45"/>
                                 <constraints>
@@ -556,13 +594,17 @@
                             <constraint firstItem="CX1-Xg-kTE" firstAttribute="height" secondItem="g45-vd-EQ3" secondAttribute="height" id="J9m-hU-Dtq"/>
                             <constraint firstAttribute="trailing" secondItem="g45-vd-EQ3" secondAttribute="trailing" constant="30" id="JoL-NN-XGS"/>
                             <constraint firstItem="CX1-Xg-kTE" firstAttribute="leading" secondItem="g45-vd-EQ3" secondAttribute="leading" id="Lnv-Wo-Ujv"/>
+                            <constraint firstItem="x3M-rT-8Sz" firstAttribute="top" secondItem="qVc-Bh-9kt" secondAttribute="top" id="Mib-hL-BYa"/>
                             <constraint firstItem="D7G-SG-Rpu" firstAttribute="top" secondItem="ZJf-eP-JsW" secondAttribute="bottom" constant="40" id="Mmn-hV-69a"/>
                             <constraint firstAttribute="bottom" secondItem="RmD-25-9Bl" secondAttribute="bottom" id="OTE-Uy-XS9"/>
                             <constraint firstAttribute="trailing" secondItem="RmD-25-9Bl" secondAttribute="trailing" id="Zsq-f3-CC8"/>
                             <constraint firstItem="CX1-Xg-kTE" firstAttribute="top" secondItem="g45-vd-EQ3" secondAttribute="bottom" constant="10" id="adD-A6-7Wx"/>
+                            <constraint firstItem="x3M-rT-8Sz" firstAttribute="leading" secondItem="qVc-Bh-9kt" secondAttribute="leading" id="afF-2m-ash"/>
                             <constraint firstItem="ZJf-eP-JsW" firstAttribute="trailing" secondItem="g45-vd-EQ3" secondAttribute="trailing" id="apn-xZ-Xn8"/>
                             <constraint firstItem="ZJf-eP-JsW" firstAttribute="leading" secondItem="g45-vd-EQ3" secondAttribute="leading" id="eOb-3w-YRO"/>
+                            <constraint firstAttribute="trailing" secondItem="x3M-rT-8Sz" secondAttribute="trailing" id="f7o-at-XYo"/>
                             <constraint firstItem="D7G-SG-Rpu" firstAttribute="centerX" secondItem="qVc-Bh-9kt" secondAttribute="centerX" id="fsp-vs-HKp"/>
+                            <constraint firstItem="sKA-ms-Y5R" firstAttribute="top" secondItem="x3M-rT-8Sz" secondAttribute="bottom" id="hvI-bd-wc1"/>
                             <constraint firstItem="g45-vd-EQ3" firstAttribute="leading" secondItem="qVc-Bh-9kt" secondAttribute="leading" constant="30" id="iOX-xh-KBl"/>
                             <constraint firstItem="NxM-D9-zjo" firstAttribute="top" secondItem="qVc-Bh-9kt" secondAttribute="top" constant="20" id="lkN-Xz-fFw"/>
                             <constraint firstItem="NxM-D9-zjo" firstAttribute="leading" secondItem="qVc-Bh-9kt" secondAttribute="leading" constant="10" id="qrV-b1-lT2"/>
@@ -597,6 +639,23 @@
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="background" translatesAutoresizingMaskIntoConstraints="NO" id="71X-bM-5qr">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                             </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="80H-c0-F0u">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eCV-0V-i7k">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="eCV-0V-i7k" secondAttribute="trailing" id="640-qb-Eda"/>
+                                    <constraint firstItem="eCV-0V-i7k" firstAttribute="centerY" secondItem="80H-c0-F0u" secondAttribute="centerY" id="HAy-Ab-5hc"/>
+                                    <constraint firstItem="eCV-0V-i7k" firstAttribute="centerX" secondItem="80H-c0-F0u" secondAttribute="centerX" id="HTC-Pd-V23"/>
+                                    <constraint firstAttribute="bottom" secondItem="eCV-0V-i7k" secondAttribute="bottom" id="VQE-JJ-jte"/>
+                                    <constraint firstItem="eCV-0V-i7k" firstAttribute="top" secondItem="80H-c0-F0u" secondAttribute="top" id="W8t-Sm-R78"/>
+                                    <constraint firstItem="eCV-0V-i7k" firstAttribute="leading" secondItem="80H-c0-F0u" secondAttribute="leading" id="nvC-ks-pmS"/>
+                                </constraints>
+                            </scrollView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yBY-J7-Nhd">
                                 <rect key="frame" x="60" y="360" width="200" height="40"/>
                                 <color key="backgroundColor" red="0.1960784314" green="0.64705882349999999" blue="0.85490196080000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -694,13 +753,16 @@
                         <color key="tintColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="71X-bM-5qr" firstAttribute="leading" secondItem="IJI-WL-4fQ" secondAttribute="leading" id="18a-Od-dnZ"/>
+                            <constraint firstItem="80H-c0-F0u" firstAttribute="top" secondItem="IJI-WL-4fQ" secondAttribute="top" id="1o8-X6-ip6"/>
                             <constraint firstItem="tdY-Rw-Qzd" firstAttribute="top" secondItem="xu9-fS-HJZ" secondAttribute="bottom" constant="10" id="2TE-6W-19b"/>
+                            <constraint firstAttribute="trailing" secondItem="80H-c0-F0u" secondAttribute="trailing" id="Bc4-nA-fVO"/>
                             <constraint firstItem="HGF-S6-0bL" firstAttribute="centerX" secondItem="yBY-J7-Nhd" secondAttribute="centerX" id="Hdp-tI-Fxq"/>
                             <constraint firstItem="xu9-fS-HJZ" firstAttribute="leading" secondItem="IJI-WL-4fQ" secondAttribute="leading" constant="30" id="IlD-SS-0He"/>
                             <constraint firstItem="DFT-za-rvD" firstAttribute="top" secondItem="6An-sg-heh" secondAttribute="bottom" constant="30" id="ON9-jc-gDz"/>
                             <constraint firstItem="tdY-Rw-Qzd" firstAttribute="leading" secondItem="xu9-fS-HJZ" secondAttribute="leading" id="QgQ-Lu-dSb"/>
                             <constraint firstItem="HGF-S6-0bL" firstAttribute="height" secondItem="yBY-J7-Nhd" secondAttribute="height" id="RmF-SE-PAh"/>
                             <constraint firstItem="tdY-Rw-Qzd" firstAttribute="height" secondItem="xu9-fS-HJZ" secondAttribute="height" id="T1a-7r-kBv"/>
+                            <constraint firstItem="ati-ze-FEJ" firstAttribute="top" secondItem="80H-c0-F0u" secondAttribute="bottom" id="U2z-fp-rMh"/>
                             <constraint firstItem="cJr-x2-GNG" firstAttribute="width" secondItem="yBY-J7-Nhd" secondAttribute="width" id="UZo-fn-dBm"/>
                             <constraint firstItem="yBY-J7-Nhd" firstAttribute="top" secondItem="tdY-Rw-Qzd" secondAttribute="bottom" constant="40" id="Vnc-bD-1xe"/>
                             <constraint firstItem="71X-bM-5qr" firstAttribute="top" secondItem="IJI-WL-4fQ" secondAttribute="top" id="abL-hG-XQJ"/>
@@ -713,6 +775,7 @@
                             <constraint firstItem="dQs-Cd-17T" firstAttribute="leading" secondItem="IJI-WL-4fQ" secondAttribute="leading" constant="10" id="nam-tB-IYl"/>
                             <constraint firstItem="yBY-J7-Nhd" firstAttribute="centerX" secondItem="IJI-WL-4fQ" secondAttribute="centerX" id="o4o-Mj-Gpx"/>
                             <constraint firstItem="HGF-S6-0bL" firstAttribute="width" secondItem="yBY-J7-Nhd" secondAttribute="width" id="q9d-9i-y58"/>
+                            <constraint firstItem="80H-c0-F0u" firstAttribute="leading" secondItem="IJI-WL-4fQ" secondAttribute="leading" id="qvV-an-RgC"/>
                             <constraint firstAttribute="trailing" secondItem="xu9-fS-HJZ" secondAttribute="trailing" constant="30" id="t23-CH-sGf"/>
                             <constraint firstItem="cJr-x2-GNG" firstAttribute="centerX" secondItem="IJI-WL-4fQ" secondAttribute="centerX" id="uVC-Bc-bZk"/>
                             <constraint firstAttribute="trailing" secondItem="71X-bM-5qr" secondAttribute="trailing" id="uYD-AP-hN9"/>
